romantik_website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: romantik
  namespace: romantik
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: romantik
